Julia-Artikel verbessert

--- a/skript/julia/julia.bib
+++ b/skript/julia/julia.bib
@@ -19,3 +19,11 @@
 	title = {Lehmer random number generator},
 	URL = {http://en.wikipedia.org/wiki/Lehmer_random_number_generator},
 }
+
+@book{julia:peitgenrichter,
+	author = {Peitgen, Heinz-Otto and Richter, Peter H.},
+	title = {The Beauty of Fractals},
+	publisher = {Springer-Verlag},
+	year = {1986},
+	ISBN = {3-540-15851-0},
+}
