--- a/skript/algorithm.tex
+++ b/skript/algorithm.tex
@@ -2016,3 +2016,20 @@ Wie das Beispiel der Matrix $M$ beim Gauss-Seidel-Algorithmus zeigt,
 gen"ugt es, effizient eine L"osung von $Mx=b$ berechnen zu k"onnen.
 Eine solche Formulierung ist tats"achlich m"oglich,
 Details dazu in \cite[Chapter 8.6]{skript:watkins}.
+
+\section{"Ubungsaufgaben}
+\begin{uebungsaufgaben}
+\item
+\input 1.tex
+\item
+\input 2.tex
+\item
+\input 3.tex
+\item
+\input 4.tex
+\item
+\input 5.tex
+\item
+\input 6.tex
+\end{uebungsaufgaben}
+
