--- a/skript/4.tex
+++ b/skript/4.tex
@@ -1,4 +1,4 @@
-Tridiagonale Matrizen sind effizient l"osbar mit einer Variante des
+Tridiagonale Gleichungssysteme sind effizient l"osbar mit einer Variante des
 Gauss-Algorithmus, die auch als Thomas-Algorithmus bekannt ist.
 F"ur die Matrix 
 \[
@@ -19,6 +19,8 @@ M=\begin{pmatrix}
 \end{pmatrix}
 \]
 und $N=A-M$ m"oglich.
+Lohnt sich der zus"atzliche Aufwand des Thomas-Algorithmus, oder
+anders gefragt:
 Welches Iterationsverfahren konvergiert schneller,
 Gauss-Seidel oder das zu dieser Zerlegung geh"orige Verfahren?
 
