--- a/skript/6.tex
+++ b/skript/6.tex
@@ -35,7 +35,7 @@ mit den Nullstellen
 \lambda=\begin{cases}
 0&\\
 \displaystyle
--\frac1{\sqrt{ab}}&
+-\frac1{\sqrt{ab}},&
 \end{cases}
 \]
 der Spektralradius ist also
