--- a/skript/skript.tex
+++ b/skript/skript.tex
@@ -5,9 +5,10 @@
 % $Id: ws-skript.tex,v 1.34 2008/11/02 22:46:16 afm Exp $
 %
 %\documentclass[a4paper,12pt]{book}
-\documentclass[a4paper]{book}
+%\documentclass[a4paper]{book}
+\documentclass{book}
 \usepackage{geometry}
-\geometry{papersize={170mm,240mm},total={130mm,200mm}}
+\geometry{papersize={170mm,240mm},total={140mm,200mm},top=21mm,bindingoffset=10mm}
 \usepackage{ngerman}
 \usepackage{times}
 \usepackage{amsmath}
