--- a/skript/algorithm.tex
+++ b/skript/algorithm.tex
@@ -2275,6 +2275,8 @@ Details dazu in \cite[Chapter 8.6]{skript:watkins}.
 \item
 \input 6.tex
 \item
+\input 9.tex
+\item
 \input 10.tex
 \end{uebungsaufgaben}
 
