--- a/skript/9.tex
+++ b/skript/9.tex
@@ -7,7 +7,7 @@ A_n=\begin{pmatrix}
   &  &\smash{\ddots}&\smash{\ddots}&  &  \\
   &  &              &              &-2& 1\\
   &  &              &              & 1&-2
-\end{pmatrix}.
+\end{pmatrix}?
 \]
 (Alle Matrixelement, die mehr als ein Element von der Diagonalen entfernt
 sind, sind 0.)
