add more problems

--- a/skript/9.tex
+++ b/skript/9.tex
@@ -1,4 +1,5 @@
-Wie gross ist der Spektralradius der $n\times n$-Matrix
+Verwenden Sie die Potenzmethode, um den 
+Spektralradius der $n\times n$-Matrix
 \[
 A_n=\begin{pmatrix}
 -2& 1&              &              &  &  \\
@@ -9,8 +10,9 @@ A_n=\begin{pmatrix}
   &  &              &              & 1&-2
 \end{pmatrix}?
 \]
+abzusch"atzen
 (Alle Matrixelement, die mehr als ein Element von der Diagonalen entfernt
-sind, sind 0.)
+sind, sind 0.). Finden Sie auch den Eigenvektor dazu.
 
 \begin{loesung}
 Der dominante Eigenwert bestimmt den Spektralradius von $A_n$, wir bestimmen
@@ -74,6 +76,7 @@ n&\lambda&\varrho(A_n)\\
 \hline
 \end{tabular}
 \end{center}
-
+Man kann draus ablesen, dass der Spektralradius immer gr"osser wird,
+aber den Wert $4$ wohl nicht "uberschreiten wird.
 \end{loesung}
 
