--- a/skript/algorithm.tex
+++ b/skript/algorithm.tex
@@ -2280,5 +2280,9 @@ Details dazu in \cite[Chapter 8.6]{skript:watkins}.
 \input 9.tex
 \item
 \input 10.tex
+\item
+\input 11.tex
+\item
+\input 12.tex
 \end{uebungsaufgaben}
 
