--- a/skript/julia/julia.bib
+++ b/skript/julia/julia.bib
@@ -27,3 +27,8 @@
 	year = {1986},
 	ISBN = {3-540-15851-0},
 }
+
+@url{julia:logistic,
+	title = {Logistic map},
+	URL = {http://en.wikipedia.org/wiki/Logistic_map},
+}
